# lwScript

./: .gitignore  Allocator.cpp  Allocator.h  Ast.cpp  Ast.h  AstOptimizePass.h  AstPass.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  Constant.h  ConstantFoldPass.cpp  ConstantFoldPass.h  CynicScript.cc  CynicScript.h  Environment.cpp  Environment.h  Frame.cpp  Frame.h  LICENSE  Lexer.cpp  Lexer.h  LibraryManager.cpp  LibraryManager.h  Logger.h  Object.cpp  Object.h  Parser.cpp  Parser.h  README.md  SymbolTable.cpp  SymbolTable.h  SyntaxCheckPass.cpp  SyntaxCheckPass.h  Token.h  Type.cpp  Type.h  TypeCheckAndResolvePass.cpp  (+14 more)
cli/: CMakeLists.txt  lwScript.cpp
examples/: anonymous-object.lws  anonymousObject.lws  array.lws  base.lws  block-expr.lws  chinese-variable-declaration.cys  chinese-variable-declaration.lws  class-inherit.cys  class-inherit.lws  class-multi-constructor.cys  class-multi-constructor.lws  class-multi-inherit.cys  class-multi-inherit.lws  class.cys  class.lws  condition.lws  destructuring-assignment.lws  dict.cys  dict.lws  enum-in-class.cys  enum.cys  enum.lws  factorial.lws  fibonacci-tail-recursion.cys  fibonacci-tail-recursion.lws  fibonacci.cys  fibonacci.lws  field-contain.lws  field.lws  floating-number.cys  floating-number.lws  function-binding.cys  function-binding.lws  function-nested-call.lws  function.cys  function.lws  if.cys  if.lws  increment-op.lws  leetcode-twosum.lws  (+30 more)
liblwScript/: Allocator.cpp  Allocator.h  Ast.cpp  Ast.h  AstPass.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  Config.cpp  Config.h  ConstantFoldPass.cpp  ConstantFoldPass.h  ConstantFolder.cpp  ConstantFolder.h  Context.cpp  Context.h  Defines.h  Frame.cpp  Frame.h  Lexer.cpp  Lexer.h  Library.cpp  Library.h  LibraryManager.cpp  LibraryManager.h  Logger.h  Object.cpp  Object.h  Optimizer.cpp  Optimizer.h  ParseOptimizer.h  Parser.cpp  Parser.h  SymbolTable.cpp  SymbolTable.h  SyntaxCheckPass.cpp  SyntaxChecker.cpp  SyntaxChecker.h  (+8 more)
liblwScript/inc/: Allocator.h  Ast.h  Chunk.h  Compiler.h  Config.h  Lexer.h  Library.h  Object.h  Optimizer.h  Parser.h  SymbolTable.h  SyntaxChecker.h  Token.h  Utils.h  VM.h  Value.h
liblwScript/src/: Allocator.cpp  Ast.cpp  Chunk.cpp  Compiler.cpp  Lexer.cpp  Library.cpp  Object.cpp  Optimizer.cpp  Parser.cpp  SymbolTable.cpp  SyntaxChecker.cpp  Utils.cpp  VM.cpp  Value.cpp
liblwScript/src/StdLibraries/: DS.inl  IO.inl  Mem.inl  Time.inl
lwScript/: Ast.h  Compiler.cpp  Compiler.h  Environment.cpp  Environment.h  Frame.cpp  Frame.h  Lexer.h  Library.h  Object.h  Parser.cpp  Parser.h  Token.h  Utils.h  VM.cpp  VM.h  lwScript.h
lwscript/: Ast.h  CMakeLists.txt  Compiler.cpp  Compiler.h  Context.cpp  Context.h  Environment.cpp  Environment.h  Frame.cpp  Frame.h  Lexer.cpp  Lexer.h  Library.cpp  Library.h  Object.h  Parser.cpp  Parser.h  Token.h  Utils.h  VM.cpp  VM.h  lwScript.h
tests/: array.lws  function.lws  if.lws  let.lws  object.lws  while.lws
